gradle adjustments